tests/golden/type_errors/nil_pattern_nonnullable_enum.cd
enum Option { Some(number), None }
let value = Option.None();
print match value {
  nil => "nil",
  Option.Some(_) => "some",
  Option.None => "none",
};
