tests/golden/type_errors/nil_pattern_nonnullable_enum.err
Type error at 4:3: literal patterns are not valid for enum values
    nil => "nil",
    ^
